HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordDuplicateField/Expected.uv
//! Expected diagnostic metadata for the RecordDuplicateField rejected-source specimen.

expectedDiagnostic("E-TYP-1901", "WF-Record-DupField")
